fondamenti_di_programmazione/temi-esame/appello_06-06-2018/error.txt
mycompito.cpp:27:1: error: prototype for ‘Display::Display(const Display&)’ does not match any in class ‘Display’
 Display::Display(const Display& d){
 ^
In file included from mycompito.cpp:1:0:
mycompito.h:24:2: error: candidates are: Display::Display(Display&)
  Display(Display& d);
  ^
mycompito.cpp:9:1: error:                 Display::Display(unsigned int, unsigned int)
 Display::Display(unsigned int L, unsigned int C){
 ^
mycompito.cpp: In member function ‘void Display::writeT(char*&)’:
mycompito.cpp:33:6: error: expected unqualified-id before ‘[’ token
  char[C+1] buffer;
      ^
mycompito.cpp:34:17: error: no matching function for call to ‘Display::str_size(char*&)’
  if(str_size(str) > C){
                 ^
mycompito.cpp:34:17: note: candidate is:
In file included from mycompito.cpp:1:0:
mycompito.h:20:15: note: unsigned int Display::str_size(const char*&)
  unsigned int str_size(const char*&);
               ^
mycompito.h:20:15: note:   no known conversion for argument 1 from ‘char*’ to ‘const char*&’
mycompito.cpp:35:11: error: ‘buffer’ was not declared in this scope
   strncpy(buffer, str, C);
           ^
mycompito.cpp:39:10: error: ‘buffer’ was not declared in this scope
   strcpy(buffer, str); 
          ^
mycompito.cpp:41:25: error: ‘buffer’ was not declared in this scope
  strcpy(matrix[indexL], buffer);
                         ^
mycompito.cpp: In function ‘std::ostream& operator<<(std::ostream&, Display)’:
mycompito.cpp:46:21: error: ‘indexL’ was not declared in this scope
  for(int i = 0; i < indexL; i++){
                     ^
mycompito.cpp:47:31: error: ‘matrix’ was not declared in this scope
   out << "[" << i+1 << "]" << matrix[i] << endl;
                               ^
mycompito.cpp:49:17: error: ‘indexL’ was not declared in this scope
  cout << "[" << indexL+1 << ">" << endl;

